# seizn

./: .env.example  .gitattributes  .gitignore  .gitleaksignore  .lychee.toml  .markdownlint.json  .stripe-litheon-skus.json  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ISSUES.md  PROGRESS.md  README.md  SECURITY.md  SELF_HOSTING.md  SPRING_ROADMAP.md  STRIPE_MIGRATION_PLAN.md  TODO.md  docker-compose.yml  eslint.config.mjs  lighthouserc.json  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  red-team-report.json  security_best_practices_report.md  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.build.json  tsconfig.json  tsconfig.node.json  tsconfig.typecheck.json  vercel.json  vitest.config.ts
.codex-reports/: change-classification-2026-03-05.md  project-audit-2026-03-05.md  quality-full-latest.json  quality-full-latest.md  quality-full.json  quality-full.md  security-audit-execution-2026-03-05.md
.github/: TECH_STACK.md  dependabot.yml
brand/: README.md
deploy/: Dockerfile  README.md  docker-compose.yml  init-db.sql  nginx.conf  prometheus.yml
docs/: AI_ONLY_PLAN.md  AI_PLAYBOOK_SEIZN_INFRA.md  ARCHITECTURE_SUMMER.md  IMPLEMENTATION_PLAN_v3.md  IMPLEMENTATION_STATUS.md  M0-M7-Progress-Report.md  MULTILINGUAL_IMPLEMENTATION_PLAN.md  PROMPT_TEMPLATES.md  SEIZN_AI_HANDBOOK.md  WORK_ORDER_STATUS_2026-02-12.md  author-memory-v3-llm-phase1-signoff.md  byok.md  (+30 more)
sdk/python/: README.md  pyproject.toml
sdk/python/seizn/: __init__.py  client.py  exceptions.py
(+3134 files in other folders)
