[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seizn"
version = "0.1.0"
description = "Official Python SDK for Seizn AI Memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Seizn", email = "support@seizn.com" }
]
keywords = ["ai", "memory", "llm", "rag", "vector", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
]

[project.urls]
Homepage = "https://seizn.com"
Documentation = "https://seizn.com/docs"
Repository = "https://github.com/seizn/seizn-python"
Changelog = "https://github.com/seizn/seizn-python/releases"

[tool.hatch.build.targets.sdist]
include = [
    "/seizn",
]

[tool.hatch.build.targets.wheel]
packages = ["seizn"]
